# Internet.nl-dashboard

./: .dockerignore  .env.sample  .envrc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG_API.md  Caddyfile  Dockerfile  LICENSE.txt  Makefile  README.dev.md  README.md  agents.md  bandit.yaml  compose.yaml  devenv.nix  docker-compose-devel.yml  docker-compose.yml  flake.nix  index.html  mypy.ini  package.json  pyproject.toml  requirements-deploy.in  requirements-deploy.txt  requirements-dev.in  requirements-dev.txt  requirements.deploy.txt  requirements.dev.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  security-constraints.in  setup.cfg  setup.py  tox.ini
.github/: build.yml  main.workflow
dashboard/: __init__.py  adapter.py  lockfile.py  manage.py  security.py  settings.py  settings_constance.py  settings_jet.py  settings_util.py  signals.py  urls.py  wsgi.py
dashboard_frontend/: .env.development  .env.production  .env.staging  .eslintrc.js  .travis.yml  Dockerfile  Makefile  README.md  package.json  vue.config.js  webpack.config.js
docs/: conf.py
docs_html/: Email Templates.html  genindex.html  objects.inv  search.html  searchindex.js
docs_markdown/: Email Templates.md  index.md
tests/: common.py  conftest.py  test_account.py  test_clean_urls.py  test_deduplication.py  test_domain_management.py  test_lockfile.py  test_mail.py  test_models.py  test_password_storage.py  test_per_account_scanner.py  test_rate_urllist.py  test_report_comparison.py  test_report_to_spreadsheet.py  test_report_upgrade.py  test_scan.py  test_scan_internet_nl_per_account.py  test_spreadsheet.py  test_translation.py  test_two_factor_integration.py  test_urllist_management.py  test_user.py  unscannable.json
tmp/: metadata_to_docs.py  metadata_web.json  openapi.json  openapi.yaml  redoc-static.html  result_example.json  scan_metadata.json
(+431 files in other folders)
