[tool.poetry]
name = "dashboard"
version = "0.0.0"
description = ""

licence = "AGPLv3"

authors = [
    "Elger Jonker <elger.jonker@gmail.com>",
    "Johan Bloemberg <github@ijohan.nl>"
]

readme = "README.md"

repository = "https://gitlab.com/internet-cleanup-foundation/web-security-map"
homepage = "https://websecuritymap.org/"

keywords = ["security", "scanner", "web"]

packages = [
    { include = "dashboard" }
]

[tool.poetry.scripts]
dashboard = 'dashboard.manage:main'


[tool.poetry.dependencies]
python = "~3.6"

# Tools/dependencies required for development or running tests.
websecmap = {git = "https://gitlab.com/internet-cleanup-foundation/web-security-map"}
django-otp = "^0.6.0"
django-two-factor-auth = "^1.8"
django-picklefield = "^2.0"
validators = "^0.12.6"
python-magic = "^0.4.15"
pytz = "^2019.1"
django = "^2.2"
polib = "^1.1"
[tool.poetry.dev-dependencies]
autopep8 = "*"
autoflake = "*"
isort = {version = "*", extras = ["pyproject"]}
pylama = "*"
coverage = "*"
# waiting for https://github.com/getsentry/pytest-responses/pull/7
pytest = "<4.1.0"
pytest-cov = "*"
pytest-django = "*"
# counterpart of requests for mock responses
pytest-responses = "*"
# output logging when test fails
pytest-logging = "*"
django-coverage = "*"
django-extensions = "*"
django-debug-toolbar = "*"
django-debug-toolbar-request-history = "*"
pytest-mock = "*"
pytest-docker = "*"

# docs / readthedocs.io
sphinx = "*"
sphinx-autobuild = "*"
recommonmark = "*"

# tests (of scanners)
httmock = "*"
freezegun = "*"
colorama = "*"
pydotplus = "*"  # generating graphs with the docs command...

# used to restart celery worker on file changes
watchdog = "~0.9.0"

django-cprofile-middleware = "*"
moviepy = "*"

[build-system]
requires = ["poetry==0.12.15", "setuptools", "wheel"]
